test update functional final